--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ header {
     text-align: center;
 }
 
+.displayBox {
+    height: 200px;
+    width: 500px;
+    outline: 1px solid black;
+    margin: auto;
+}
+
 .buttons {
     text-align: center;
     margin-top: 30px;
