--- a/style.css
+++ b/style.css
@@ -24,6 +24,97 @@ header {
 }
 
 .buttons {
-    text-align: center;
     margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+#c {
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+#ce {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+#one {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#two {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#three {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+#four {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#five {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+#six {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+#seven {
+    grid-column: 1;
+    grid-row: 4;
+}
+
+#eight {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#nine {
+    grid-column: 3;
+    grid-row: 4;
+}
+
+#zero {
+    grid-column: 1;
+    grid-row: 5;
+}
+
+#decimal {
+    grid-column: 2;
+    grid-row: 5;
+}
+
+#equal {
+    grid-column: 3 / 5;
+    grid-row: 5;
+}
+
+#add {
+    grid-column: 4;
+    grid-row: 1;
+}
+
+#subtract {
+    grid-column: 4;
+    grid-row: 2;
+}
+
+#multiply {
+    grid-column: 4;
+    grid-row: 3;
+}
+
+#divide {
+    grid-column: 4;
+    grid-row: 4;
 }
