--- a/style.css
+++ b/style.css
@@ -24,9 +24,14 @@ header {
 }
 
 .buttons {
-    margin-top: 30px;
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    width: 500px;
+}
+
+button {
+    height: 50px;
 }
 
 #c {
