--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ header {
 .displayBox {
     height: 100px;
     width: 500px;
-    outline: 1px solid black;
+    outline: 1px solid #1C1C1C;
     margin: auto;
     font-family: 'Orbitron';
     text-align: right;
     display: flex;
     flex-direction: column;
+    background-color: #1C1C1C;
+    color: #FAF9F6;
 }
 
 .topText {
@@ -32,7 +34,7 @@ header {
 
 button {
     height: 100px;
-    border-radius: 0;
+    outline: 1px solid #1C1C1C;
 }
 
 #c {
@@ -133,6 +135,7 @@ button {
 
 .erase {
     background-color: #D4D4D2;
+    color: #1C1C1C;
     font-size: 36px;
 }
 
